[project]
name = "silly-sprites"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.47.0",
    "gradio>=3.36.1",
    "onnxruntime>=1.19.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.1",
    "rembg>=2.0.61",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
    "websocket-client>=1.9.0",
]
